--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "week3-crud-todo-api",
+  "version": "1.0.0",
+  "description": "A simple CRUD TODO API",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
